--- a/pages/16892.html
+++ b/pages/16892.html
@@ -309,10 +309,10 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a><ul><li><a href='#papers'>Papers</a></li><li><a href='#talks'>Talks</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a><ul><li><a href='#papers_using_dependent_type_theory'>Papers using dependent type theory</a></li><li><a href='#papers_using_homotopy_type_theory'>Papers using homotopy type theory</a></li><li><a href='#talks'>Talks</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A number of researchers are using <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> as a formal tool to understand <a class='existingWikiWord' href='/nlab/show/linguistics'>natural language</a>.</p>
+<p>A number of researchers are using <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> as a formal tool to understand <a class='existingWikiWord' href='/nlab/show/linguistics'>natural language</a>. Some are using in particular <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -322,7 +322,7 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<h3 id='papers'>Papers</h3>
+<h3 id='papers_using_dependent_type_theory'>Papers using dependent type theory</h3>
 
 <ul>
 <li>Asher, N.: Lexical Meaning in Context: A Web of Words. Cambridge University Press (2011)</li>
@@ -356,8 +356,14 @@ margin-left: 0em;
 <li>Sundholm, G.: Proof theory and meaning. In: Gabbay, D., Guenthner, F. (eds.) Handbook of Philosophical Logic, vol. 3, pp. 471–506. Springer (1986)</li>
 
 <li>Tanaka, R., Mineshima, K., Bekki, D.: Resolving modal anaphora in Dependent Type Semantics. In: Proceedings of LENLS11. pp. 43–56 (2014), <a href='http://link.springer.com/chapter/10.1007%2F978-3-662-48119-6_7'>Springer</a>.</li>
+</ul>
 
+<h3 id='papers_using_homotopy_type_theory'>Papers using homotopy type theory</h3>
+
+<ul>
 <li>Bahramian, H., Nematollahi, N., Sabry, A.: Copredication in Homotopy Type Theory, <a href='https://www.researchgate.net/publication/320704539_Copredication_in_homotopy_type_theory'>pdf</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/David+Corfield'>David Corfield</a>, <em>Expressing ‘the structure of’ in homotopy type theory</em>, <a href='https://ncatlab.org/davidcorfield/show/Expressing+%27The+Structure+of%27+in+Homotopy+Type+Theory'>webpage</a></li>
 </ul>
 
 <p>A worked example, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> in the <span class='newWikiWord'>Grammatical Framework<a href='/nlab/new/Grammatical+Framework'>?</a></span></p>
@@ -380,14 +386,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 21:24:41 
-  by <span class="newWikiWord">Hamidreza Bahramian<a href="/nlab/new/Hamidreza+Bahramian">?</a></span>
-  (2602:306:3951:84e0:fd21:20b3:3602:afff)
+  Revised on November  7, 2017 06:50:33 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dependent+type+theoretic+methods+in+natural+language+semantics/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dependent+type+theoretic+methods+in+natural+language+semantics/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
