--- a/pages/1788.html
+++ b/pages/1788.html
@@ -309,17 +309,27 @@ margin-left: 0em;
 
 <div id="revision">
     <p>…</p>
+
+<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a> on <math class='maruku-mathml' display='inline' id='mathml_4d0826d5b9ba1a28a6d6e93816374f710aa819a7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4d0826d5b9ba1a28a6d6e93816374f710aa819a7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup></mrow></msup><mo>=</mo><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mi>i</mi><mi>ω</mi><msup><mi>x</mi> <mn>0</mn></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>
+  x \mapsto e^{i k_\mu x^\mu } = e^{i \vec k \cdot \vec x - i \omega x^0}
+
+</annotation></semantics></math></div><table><thead><tr><th>symbol</th><th>name</th></tr></thead><tbody><tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_4d0826d5b9ba1a28a6d6e93816374f710aa819a7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mo>=</mo><mn>2</mn><mi>π</mi><mo stretchy='false'>/</mo><mi>λ</mi></mrow><annotation encoding='application/x-tex'>{\vert \vec k \vert} = 2\pi/\lambda</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/wavelength'>wave number</a></td></tr>
+<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_4d0826d5b9ba1a28a6d6e93816374f710aa819a7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>=</mo><mn>2</mn><mi>π</mi><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow></mrow><annotation encoding='application/x-tex'>\lambda = 2\pi/{\vert k \vert}</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/wavelength'>wave length</a></td></tr>
+<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_4d0826d5b9ba1a28a6d6e93816374f710aa819a7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi><mo>≔</mo><msub><mi>k</mi> <mn>0</mn></msub><mo>=</mo><mn>2</mn><mi>π</mi><mo stretchy='false'>/</mo><mi>ν</mi></mrow><annotation encoding='application/x-tex'>\omega \coloneqq k_0 = 2\pi / \nu</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/frequency'>angular frequency</a></td></tr>
+<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_4d0826d5b9ba1a28a6d6e93816374f710aa819a7_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ν</mi><mo>=</mo><mn>2</mn><mi>π</mi><mo stretchy='false'>/</mo><mi>ω</mi></mrow><annotation encoding='application/x-tex'>\nu = 2\pi / \omega</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></td></tr>
+</tbody></table>
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 14:07:47 
+  Revised on November  7, 2017 06:47:46 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1213" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1213 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1214" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1214 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
