--- a/pages/9485.html
+++ b/pages/9485.html
@@ -319,11 +319,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a>, <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a>, <a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/amplitude'>amplitude</a></p>
 </li>
 </ul>
 
@@ -394,18 +398,20 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>↦</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover></mrow></msup></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>↦</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover></mrow></msup></mrow><annotation encoding='application/x-tex'>
   \vec x \mapsto e^{2 \pi i \vec k \cdot \vec x}
 
 </annotation></semantics></math></div>
-<p>a <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a> with <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\vec k \in \mathbb{R}^n</annotation></semantics></math>, then its <em>wavelength</em> is the inverse of the <a class='existingWikiWord' href='/nlab/show/norm'>norm</a> of <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>≔</mo><mn>1</mn><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>a <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a> with <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\vec k \in \mathbb{R}^n</annotation></semantics></math>, then its <em>wavelength</em> is the inverse of the <a class='existingWikiWord' href='/nlab/show/norm'>norm</a> of <math class='maruku-mathml' display='inline' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>≔</mo><mn>1</mn><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \lambda \coloneqq 1/{\vert k\vert}
   \,.
 
 </annotation></semantics></math></div>
-<p>The quotient <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow><mo>∈</mo><mi>S</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>k/{\vert k \vert} \in S(\mathbb{R}^n)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a></em> of the <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a>.</p>
+<p>The quotient <math class='maruku-mathml' display='inline' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow><mo>∈</mo><mi>S</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>k/{\vert k \vert} \in S(\mathbb{R}^n)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a></em> of the <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a>.</p>
+
+<p>The product <math class='maruku-mathml' display='inline' id='mathml_b694f2ddf82049502abd5e868e88c294f9935d94_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn><mi>π</mi><mo stretchy='false'>/</mo><mi>λ</mi></mrow><annotation encoding='application/x-tex'>2\pi/\lambda</annotation></semantics></math> is also called the <em>wave number</em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -435,17 +441,25 @@ margin-left: 0em;
  
  
 </p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 06:14:50 
+  Revised on November  7, 2017 06:48:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wavelength/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/wavelength" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wavelength" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wavelength/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/wavelength" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wavelength" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
