--- a/pages/917.html
+++ b/pages/917.html
@@ -312,11 +312,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> from <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> is <strong>injective</strong> if <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>=</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>x = y</annotation></semantics></math> whenever <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f(x) = f(y)</annotation></semantics></math>. An injective function is also called <strong>one-to-one</strong> or an <strong>injection</strong>; it is the same as a <a class='existingWikiWord' href='/nlab/show/monomorphism'>monomorphism</a> in <a class='existingWikiWord' href='/nlab/show/Set'>the category of sets</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> from <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> is <strong>injective</strong> if <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>=</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>x = y</annotation></semantics></math> whenever <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f(x) = f(y)</annotation></semantics></math>. An injective function is also called <strong>one-to-one</strong> or an <strong>injection</strong>; it is the same as a <a class='existingWikiWord' href='/nlab/show/monomorphism'>monomorphism</a> in <a class='existingWikiWord' href='/nlab/show/Set'>the category of sets</a>.</p>
 
 <p>A <em><a class='existingWikiWord' href='/nlab/show/bijection'>bijection</a></em> is a function that is both injective and <a class='existingWikiWord' href='/nlab/show/surjection'>surjective</a>.</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a>, a <a class='existingWikiWord' href='/nlab/show/strongly+extensional+function'>strongly extensional function</a> between sets equipped with tight <a class='existingWikiWord' href='/nlab/show/apartness+relation'>apartness relation</a>s is called <strong>strongly injective</strong> if <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≠</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f(x) \ne f(y)</annotation></semantics></math> whenever <math class='maruku-mathml' display='inline' id='mathml_67f205e3cde152e2e63ac64baa6e52b105c0188b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>≠</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>x \ne y</annotation></semantics></math> (which implies that the function is injective). This is the same as a <a class='existingWikiWord' href='/nlab/show/regular+monomorphism'>regular monomorphism</a> in the category of such sets and strongly extensional functions (while any merely injective function, if strongly extensional, is still a monomorphism). Some authors use ‘one-to-one’ for an injective function as defined above and reserve ‘injective’ for the stronger notion.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a>, a <a class='existingWikiWord' href='/nlab/show/strongly+extensional+function'>strongly extensional function</a> between sets equipped with tight <a class='existingWikiWord' href='/nlab/show/apartness+relation'>apartness relation</a>s is called <strong>strongly injective</strong> if <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≠</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f(x) \ne f(y)</annotation></semantics></math> whenever <math class='maruku-mathml' display='inline' id='mathml_bb363822cf16d2c386c6a44cd65e99c719d8ea0b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>≠</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>x \ne y</annotation></semantics></math> (which implies that the function is injective). This is the same as a <a class='existingWikiWord' href='/nlab/show/regular+monomorphism'>regular monomorphism</a> in the category of such sets and strongly extensional functions (while any merely injective function, if strongly extensional, is still a monomorphism). Some authors use ‘one-to-one’ for an injective function as defined above and reserve ‘injective’ for the stronger notion.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -327,6 +327,14 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/monomorphism'>monomorphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/embedding'>embedding</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monomorphism+in+an+%28infinity%2C1%29-category'>monomorphism in an (infinity,1)-category</a></p>
 </li>
 </ul>
 
@@ -343,17 +351,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on August 31, 2012 15:20:09 
+  Revised on November  7, 2017 09:51:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.6)
+  (195.37.234.89)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/injection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injection/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/injection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/injection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injection/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/injection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
